# nnds

./: .gitattributes  .gitignore  =0.8.0  CONTRIBUTING.md  Makefile  README.md  Research_run-improved  batch_inference.py  bev_mapper.py  bootstrap_nnds_session.sh  calibrate_camera.py  check_scale_consistency.py  check_scale_vs_reference.py  colab_ready.py  debug_report_world.txt  export_undistort_review.py  extract_grid_frames.py  gate_counter.py  giti_bev_calib.py  improved_tracking.py  nnds_structure.py  one_run.py  pet_conflict_checker.py  pet_ttc_calculator.py  pyproject.toml  requirements.txt  requirements_no_ultra.txt  rtdetr-l.pt  run_vlm_events.py  traffic_analyzer.py  traffic_pipeline.py  traj_diffusion_normalized.py  validate_calibration_on_video.py  vehicle_calibration_check.py  visualize_conflicts.py  vlm_backend_stub.py  vlm_events.py  vlm_hf_backend.py
.github/: pull_request_template.md
Grid_&_trajectory/: sam3_grid_pet.py  spatial_grid.py
analysis/: __init__.py  pet_diffusion_analysis.py  pet_summary.py  research_run.py  safety_eval_diffusion.py  safety_eval_diffusion_notebook.py  trajectory_parser.py  vlm_backend_stub.py  vlm_events.py  vlm_schema.py
calibration/: H_from_giti_calibration_points.npy  H_from_giti_calibration_points_meta.json  check_exif_focal_length.py  grid_validation_calibration.py  loocv_real_calibration.py  loocv_real_calibration_results.json  monte_carlo_calibration_benchmark.py  monte_carlo_calibration_notes.md  pnp_vs_homography_loocv.py  pnp_vs_homography_loocv_results.json  probe_video_metadata.py  scan_camera_metadata.py  validate_speed_from_tracks.py
configs/: GITI_grid_config.json  bev_config.json  gate_config.yaml  giti_calibration_points.json
core/: __init__.py  bev_mapper.py  gate_counter.py  giti_bev_calib.py  pet_conflict_checker.py  rt_detr_detector.py  traffic_analyzer.py  types.py
docs/: CLEANUP_SUMMARY.md  MIGRATION_GUIDE.md  limitations_calibration.md
experimental/: check_local_motion.py  contact_point_pipeline.py
grid_trajectory/: __init__.py  pet_grid.py  sam3_grid_pet.py  spatial_grid.py  trajectory_safety_analyzer.py  yolo26seg_grid_pet.py
nnds.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
outputs/: contact_points_debug.csv  local_motion_summary.csv  petevents_20_frames_test.csv  petevents_bev.csv  petevents_bev.parquet  petevents_bev_30frames.csv  petevents_bev_50.csv  petevents_bev_test.csv  petevents_bev_test_with_frames.csv  petevents_bev_vlm_50frames_vlm_mock.csv  petevents_working.csv  safety_eval_diffusion.csv  (+1 more)
result/: README.md
(+56 files in other folders)
