[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nnds"
version = "0.1.0"
description = "Non-motorized and heterogeneous traffic safety analysis (research code)"
requires-python = ">=3.10"

authors = [
  { name = "ASCC Sharq 786" }
]

# Runtime dependencies – keep in sync with requirements.txt
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.2",
  "scipy==1.13.1",
  "opencv-python==4.9.0.80",
  "matplotlib==3.8.4",
  "tqdm==4.66.4",
  "torch==2.2.2",
  "torchvision==0.17.2",
  "ultralytics==8.2.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "black>=24.3",
  "ruff>=0.4.4",
  "mypy>=1.9.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
  "-ra", # show extra summary info
]
