[build-system]
requires = ["setuptools>=68,<82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nnds"
version = "0.1.0"
description = "Non-motorized and heterogeneous traffic safety analysis (research code)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "ASCC Sharq 786" }
]
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.2",
  "scipy==1.13.1",
  "opencv-python==4.9.0.80",
  "matplotlib==3.8.4",
  "tqdm==4.66.4",
  "torch>=2.5,<2.6",
  "torchvision>=0.20,<0.21",
  "torchaudio>=2.5,<2.6",
  "ultralytics==8.2.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "black>=24.3",
  "ruff>=0.4.4",
  "mypy>=1.9.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["analysis*", "core*", "grid_trajectory*", "traffic_diffusion*", "vlm*"]
exclude = ["tests*", "outputs*", "results*", "sample_data*", "docs*", "experimental*", "colab*", "tools*"]

[tool.pytest.ini_options]
pythonpath = ["."]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = ["-ra"]

[tool.ruff.lint.per-file-ignores]
"traffic_diffusion/traj_diffusion_normalized.py" = ["F821"]

